--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <meta property="og:image" content="/aboutme/share_steam_logo.png">
       <meta name="twitter:image" content="/aboutme/share_steam_logo.png">
       <meta property="og:image:secure" content="/aboutme/share_steam_logo.png">
+      <script type="module" src="/main.js"></script>
    </head>
    <body class="v6 responsive_page " style="">
       <div class="responsive_page_frame with_header">
